# global-pharma-passport

./: render.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260329_0001_init_global_pharma_passport.py  20260329_0002_add_auth_fields.py  20260329_0003_add_billing_fields.py  20260329_0004_add_product_events.py  20260330_0005_make_supabase_auth_id_nullable.py  20260331_0006_add_email_verification_tokens.py
apps/api/app/: __init__.py  db_init.py  main.py
apps/api/app/api/: auth.py  context.py  dependencies.py
apps/api/app/core/: __init__.py  config.py  database.py  errors.py  international.py  logging.py  middleware.py  security.py
apps/api/app/models/: __init__.py  analytics.py  billing.py  catalog.py  email_verification.py  mixins.py  passport.py  user.py
apps/api/app/schemas/: analytics.py  auth.py  billing.py  common.py  equivalents.py  interactions.py  medications.py  meta.py  passport.py  users.py
apps/api/app/seeds/: __init__.py  bootstrap_mvp_catalog.py  load_mvp_catalog.py  mvp_maroc_france.py
apps/api/app/services/: analytics.py  auth.py  billing.py  email_verification.py  equivalents.py  interactions.py  medications.py  passport.py  users.py
apps/api/tests/: conftest.py  helpers.py  test_analytics.py  test_api.py  test_auth_and_patient_api.py  test_authentication.py  test_billing.py  test_equivalents.py  test_interactions.py  test_main_api.py  test_mvp_seed_dataset.py  test_passport.py  test_security.py
(+92 files in other folders)
