[project]
name = "global-pharma-passport-api"
version = "0.1.0"
description = "FastAPI backend for Global Pharma Passport"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "PyJWT>=2.9,<3.0",
  "email-validator>=2.2,<3.0",
  "pwdlib>=0.2,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "stripe>=11.6,<12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "httpx>=0.27,<1.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
